--- a/EOS.Officier/Web.config
+++ b/EOS.Officier/Web.config
@@ -12,7 +12,7 @@
       providerName="System.Data.SqlClient" />
     <add name="ESSMerkezConnectionString" connectionString="Data Source=Alico-PC;Initial Catalog=ESSMerkez;User ID=sa;Password=80893043"
       providerName="System.Data.SqlClient" />
-    <add name="ESSInternetConnectionString1" connectionString="Data Source=ALICO-PC;Initial Catalog=ESSInternet;Integrated Security=True"
+    <add name="ESSMerkezConnectionString1" connectionString="Data Source=Alico-PC;Initial Catalog=ESSMerkez;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 
