--- a/EOS.ServiceHost/EOS.ServiceHost.csproj
+++ b/EOS.ServiceHost/EOS.ServiceHost.csproj
@@ -49,9 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EOS.ServiceHostInstaller.cs">
       <SubType>Component</SubType>
